set AWS_DEFAULT_REGION in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 dist: trusty
 sudo: false
 
+env:
+  AWS_DEFAULT_REGION=eu-west-1
 before_install:
   - curl -fSL "https://releases.hashicorp.com/terraform/0.12.20/terraform_0.12.20_linux_amd64.zip" -o terraform.zip
   - sudo unzip terraform.zip -d /opt/terraform
